--- a/wp-content/themes/wicket/assets/css/responsive.css
+++ b/wp-content/themes/wicket/assets/css/responsive.css
@@ -80,6 +80,19 @@
 .agent-left-section {
     width:100%;
 }
+.velki-agent-card {
+    flex-direction: row !important;
+}
+.agent-left-section {
+    width: 40%;
+}
+.agent-left-section {
+    flex-direction: row !important;
+}
+.agent-info {
+    display: flex;
+    text-align: left;
+}
 }
 /*Tab Portrait*/
 @media only screen and (max-width:991px) {
@@ -149,7 +162,7 @@
     max-width: 50%;
 }
 .footer-colume-3 {
-    padding-left: 36px;
+    padding-left:20px;
     -webkit-box-flex: 0;
     -ms-flex: 0 0 50%;
     flex: 0 0 50%;
@@ -164,13 +177,52 @@
 body .velki-blog-listing-wrapper {
     padding: 0px 0px !important;
 }
+.blog-share-section {
+    flex-direction: row !important;
+    align-items: flex-start;
+    align-items: center;
+}
 }
 /*Tab Portrait*/
 @media only screen and (max-width:768px) {
-
+	.blog-share-section {
+    flex-direction: row !important;
+    align-items: flex-start;
+    align-items: center;
+}
+.blog-share-section {
+    flex-direction: row;
+    align-items: flex-start;
+    padding-bottom: 11px;
+}
 }
 /*Mobile View Start*/
 @media only screen and (max-width:767px) {
+.wicket-footer ul li a {
+    font-size: 15px;
+}
+.footer-copyright-widgets1 p {
+    margin-bottom: 10px;
+}
+.search-results .wicket-site-content {
+    padding: 34px 15px 50px;
+}
+.wicket-footer {
+   padding: 48px 0px 34px 0px;
+}
+.velki-agent-card {
+    flex-direction: column !important;
+}
+.agent-left-section {
+    width: 100%;
+}
+.agent-left-section {
+      flex-direction: column !important;
+}
+.agent-info {
+    display: flex;
+    text-align: center;
+}
 .divided-shape-customer-service .elementor-widget-container{
 	margin-right:0px !important;
 }
@@ -202,7 +254,7 @@ ul#menu-bottom-menu {
     top: 31px;
 }
 .wicket-main-menu {
-    top:70px;
+    top:76px;
 }
    .search-box {
     position: initial;
@@ -229,7 +281,7 @@ section.no-results.not-found {
     margin-top: 59px;
 }
 .wicket-footer ul li {
-    margin-bottom: 10px;
+    margin-bottom: 3px;
 }
 .wicket-main-menu li a {
     font-size: 16px;
@@ -366,9 +418,7 @@ section.no-results.not-found {
 .search-results h1.page-title {
     font-size: 25px;
 }
-.search-results .wicket-site-content {
-    margin-bottom:150px;
-}
+
 .search-results .wicket-site-content .container {
     padding-right: 0;
     padding-left: 0;
@@ -462,9 +512,11 @@ body .wicket-brand-wrap {
     width: 70%;
 }
 .star-rating-box .elementor-image-box-wrapper {
-    display: flex;
-    flex-wrap: nowrap;
-    text-align: left !important;
+  display: flex;
+        gap: 0px;
+        justify-content: flex-start;
+        align-items: center;
+        flex-wrap: wrap;
 }
 .wicket-footer-widget.widget_media_image {
     margin-bottom: 27px;
@@ -505,9 +557,34 @@ body .wicket-brand-wrap {
 .agent-id-section {
     justify-content: center;
 }
-.search-results .wicket-site-content {
-    background-color: #030712;
-    padding: 80px 15px 50px;
+
+.full-container-blog .blog-content p {
+    margin-bottom: 20px;
+    font-size: 15px;
+    color: #D1D5DB;
+    line-height: 30px;
+}
+.message-btn {
+    padding: 8px 12px !important;
+	font-size:12px !important;
+}
+.contact-number {
+    font-size: 12px !important;
+}
+.blog-content h2 {
+    font-size: 22px;
+    margin-top: 32px;
+    line-height: 38px !important;
+}
+.footer-colume-1 p{
+	margin-bottom:0px;
+}
+.wicket-main-menu li > .sub-menu li a {
+    padding: 14px 40px;
+    color: #fff;
+}
+.menu-social-media-container ul {
+    gap: 0 15px;
 }
 }
 /*Mobile View Small*/
@@ -524,7 +601,14 @@ body .wicket-brand-wrap {
 .list-box .focus-part .user-id {
     min-width: 70px;
 }
-
+.contact-item {
+    flex-wrap: wrap;
+}
+.message-btn {
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+}
 }
 /*Mobile Tiny Small*/
 @media only screen and (max-width:320px) {
