--- a/wp-content/themes/wicket/assets/css/theme.css
+++ b/wp-content/themes/wicket/assets/css/theme.css
@@ -398,6 +398,7 @@ span.mb-toggle.js-hide-mb-nav i {
 	min-height:400px;
 	background-color: #030712;
 	padding:111px 0px 0px 0px;
+	border-top: 1px solid #1E2939;
 }
 .wicket-footer .widget-title {
     color:#99A1AF;
@@ -1264,6 +1265,7 @@ nav.navigation.posts-navigation {
 	border-radius:10px;
 	display: flex;
 	min-width: 256px;
+	    padding: 0 7px;
 }
 .search-box-wrap label{
 	 margin-bottom:0;
@@ -1830,7 +1832,7 @@ box-shadow: 0px 25px 50px -12px rgba(0, 0, 0, 0.25);
 	padding:0px !important;
 }
 .full-container-blog {
-    max-width: 930px;
+    max-width: 960px;
     margin: 0 auto;
 	padding:48px 30px;
 }
@@ -1852,7 +1854,6 @@ box-shadow: 0px 25px 50px -12px rgba(0, 0, 0, 0.25);
 }
 .full-container-blog .blog-featured-image{
 	position:relative;
-	height:384px;
 }
 .full-container-blog .blog-featured-image img{
 	height:100%;
@@ -1884,7 +1885,7 @@ box-shadow: 0px 25px 50px -12px rgba(0, 0, 0, 0.25);
     font-weight: 400;
 }
 .full-container-blog .blog-title {
-    font-size: 48px;
+    font-size: 40px;
     font-weight: 700;
     line-height: 1.3;
     color: #ffffff;
@@ -1929,5 +1930,89 @@ box-shadow: 0px 25px 50px -12px rgba(0, 0, 0, 0.25);
 
 .search-results .wicket-site-content {
     background-color: #030712;
-    padding: 80px 30px 0px;
+    padding: 80px 30px 80px;
+}
+.full-container-blog .view-all-blogs {
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 400;
+	text-decoration:none !Important;
+    transition: opacity 0.3s ease;
+}
+.full-container-blog .view-all-blogs:hover {
+	color:#fec611;
+}
+.velki-blog-image {
+    width: 100%;
+	height: 192px;
+}
+.velki-blog-grid a{
+	text-decoration:none !important;
+}
+.velki-blog-title a:hover {
+     color: #fec611;
+}
+.velki-blog-load-more {
+    border-radius: 14px !important;
+}
+.velki-faq-answer-content img.emoji {
+    margin-right:9px !important;
+}
+
+button.blog-share-btn-footer {
+    background: #fbbf24;
+    border-radius: 14px;
+    padding: 15px 25px;
+    color: #101828;
+    font-size: 14px;
+    font-weight: bold;
+	border:0px;
+}
+button.blog-share-btn-footer:hover{
+	color: #000000;
+	background:#ffffff;
+}
+.blog-bottom-nav {
+    padding-top: 20px;
+    text-align: center;
+}
+.full-container-blog .view-all-blogs {
+    color: #fbbf24;
+}
+.velki-featured-contact{
+	position:relative;
+	padding-left: 75px !important;
+	    text-align: left !important;
+}
+.velki-featured-phone {
+    font-size: 18px !important;
+    font-weight: 700;
+    color: white;
+    letter-spacing: 1px;
+}
+.velki-featured-contact:after{
+    content: '';
+    background: url(../img/phone-icon.png) no-repeat center;
+    width: 40px;
+    height: 40px;
+    top: 26px;
+    left: 10px;
+    position: absolute;
+    vertical-align: middle;
+    margin-left: 10px;
+    display: inline-block;
+}
+.velki-featured-contact-label {
+    font-size: 12px !important;
+    color: #99A1AF !important;
+    margin-bottom: 2px !important;
+    font-family: 'Noto Sans Bengali', sans-serif;
+}
+.velki-faq-answer-content p {
+    margin: 0 0 15px 0;
+    line-height: 28px;
 }
